# system-hook

./: .env.example  Cargo.toml  LICENSE.txt  README.md
.github/: release.yml
.github/workflows/: release.yml
github-webhook/: Cargo.toml  README.md
github-webhook-extract/: Cargo.toml  README.md
github-webhook-extract/src/: axum.rs  lib.rs
github-webhook/src/: axum.rs  lib.rs  types.rs
pathbuf-completions/: Cargo.toml
pathbuf-completions/examples/: complete.rs
pathbuf-completions/src/: lib.rs
src/: config.rs  daemon.rs  error.rs  init.rs  init_project.rs  main.rs  server.rs  shook.service
text-completions/: Cargo.toml  README.md
text-completions/examples/: complete.rs
text-completions/src/: lib.rs
