[package]
name = "system-hook"
version = "0.1.0"
edition = "2021"
description = "shook: webhook server to automatically update production servers"
categories = ["webhook", "systemd", "ci"]
license = "MIT"
documentation = "https://docs.rs/shook"
homepage = "https://github.com/beaconbrigade/system-hook"
repository = "https://github.com/beaconbrigade/system-hook.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["github-webhook", "text-completions"]

[[bin]]
name = "shook"
path = "src/main.rs"

[dependencies]
argh = "0.1.10"
axum = { version = "0.6.11", features = ["macros"] }
color-eyre = "0.6.2"
dialoguer = { version = "0.10", features = ["completion"] }
dotenvy = "0.15.7"
futures = "0.3.28"
github-webhook = { version = "0.1.0", path = "github-webhook", features = ["axum"] }
hyper = { version = "0.14.25", features = ["full"] }
nix = { version = "0.26.2", features = ["user", "fs"], default-features = false }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
text-completions = { version = "0.1.0", path = "text-completions" }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.3"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
pkg-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
