[package]
name = "system-hook"
version = "0.1.1"
edition = "2021"
description = "shook: webhook server to automatically update production servers"
categories = ["webhook", "systemd", "ci"]
license = "MIT"
documentation = "https://docs.rs/shook"
homepage = "https://github.com/beaconbrigade/system-hook"
repository = "https://github.com/beaconbrigade/system-hook.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["github-webhook-extract", "text-completions"]

[[bin]]
name = "shook"
path = "src/main.rs"

[dependencies]
argh = "0.1.10"
axum = { version = "0.6.20", features = ["macros"] }
color-eyre = "0.6.2"
dialoguer = { version = "0.10", features = ["completion"] }
dotenvy = "0.15.7"
futures = "0.3.28"
github-webhook-extract = { version = "0.1.0", path = "github-webhook-extract", features = ["axum"] }
hyper = { version = "0.14.25", features = ["full"] }
nix = { version = "0.26.2", features = ["user", "fs"], default-features = false }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
text-completions = { version = "0.1.0", path = "text-completions" }
thiserror = "1.0.40"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.7.3"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/shook-{ target }-v{ version }{ archive-suffix }"
pkg-dir = "shook-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
