[package]
name = "github-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
axum = ["dep:axum", "dep:tracing"]

[dependencies]
axum = { version = "0.6.12", optional = true }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_path_to_error = "0.1.11"
strum = "0.24.1"
strum_macros = "0.24.3"
tracing = { version = "0.1.37", optional = true }
uuid = { version = "1.3.0", features = ["serde"] }
