[package]
name = "github-webhook"
version = "0.1.0"
edition = "2021"
description = "Parse and verify Github webhook requests"
categories = ["webhook", "web", "github"]
license = "MIT"
license-file = "LICENSE.txt"
homepage = "https://github.com/beaconbrigade/system-hook/tree/master/github-webhook"
repository = "https://github.com/beaconbrigade/system-hook.git"
documentation = "https://docs.rs/github-webhook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
axum = ["dep:axum"]

[dependencies]
axum = { version = "0.6.12", optional = true }
bytes = "1.4.0"
digest = { version = "0.10.6", features = ["mac"] }
generic-array = "0.14.6"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_path_to_error = "0.1.11"
serde_urlencoded = "0.7.1"
sha1 = "0.10.5"
sha2 = "0.10.6"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
tracing = "0.1.37"
uuid = { version = "1.3.0", features = ["serde"] }
